@@ -5,6 +5,7 @@
             Now use exponents when printing doubles >= 1E21 or < 1E-6 (fix #1489)
             Fix Regexp handling of unescaped '.' in character group: /[.]/ (fix #1948)
             Now error if using (unsupported) RegExp backreferences
+            nRF52: Ensure SPI 1 byte DMA errata workaround isn't applied to non-52832 parts
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
